fixed tag alignment within inputs for 2 & 3; changed glyphicon for 3 to be parallel to 2

--- a/sass/bootstrap-tags.scss
+++ b/sass/bootstrap-tags.scss
@@ -5,11 +5,14 @@
     display:none;
   }
   .tags-input {
-    // width:100%;
-    /*height:18px !important; */
-    // margin:0;
-    /*padding-bottom:0 !important;*/
-    /*font-size:12px !important;*/
+    box-sizing: content-box;
+    -webkit-box-sizing: content-box;
+    width:100%;
+    height:18px !important; 
+    margin:0;
+    padding-bottom:0 !important;
+    font-size:12px !important;
+    padding-top:0;
   }
   .tags {
     width:inherit;
@@ -19,7 +22,7 @@
     margin:0;
   }
   .tag {
-    padding: .2em .4em .3em;
+    padding: .2em .4em .4em;
     margin:.1em;
     float:left;
   }
@@ -53,7 +56,7 @@
     margin:0;
   }
   .tag {
-    padding: 1px 3px;
+    padding: .2em .3em;
     margin:1px;
     float:left;
   }
@@ -66,7 +69,8 @@
 
 .tag-list {
   width: 280px;
-  height: 26px;
+  height: auto;
+  min-height: 26px;
   left:2px;
   top:2px;
   position:relative;
@@ -77,8 +81,6 @@ ul.tags-suggestion-list {
   height:auto;
   list-style:none;
   margin:0;
-  // top:inherit;
-  // left:inherit;
   z-index:2;
   max-height:160px;
   overflow: scroll;
